# pico-pong

./: .gitignore  CMakeLists.txt  README.md  compile_project.sh  pong.uf2
src/: CMakeLists.txt  constants.h  logic.c  logic.h  main.c  painting.c  painting.h
src/lib/: ICM20948.c
